# merger-simulator

./: .gitignore  LICENSE  README.md  example.ipynb  fast_food.csv  pyproject.toml
merger_simulator/: __init__.py  costs.py  data.py  entry.py  estimation.py  instruments.py  merger.py  welfare.py
merger_simulator/demand/: __init__.py  base.py  linear.py  log_log.py  logit.py  nested_logit.py
tests/: test_core.py  test_entry_welfare.py  test_linear.py  test_loglog.py  test_takehome.py
